--- a/Sportivity/app/src/main/res/layout/activity_pre_cardview.xml
+++ b/Sportivity/app/src/main/res/layout/activity_pre_cardview.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/CardViewActivities"
-        android:layout_width="394dp"
-
-
-        android:layout_height="85dp"
-        app:cardBackgroundColor="#57575555"
+        android:layout_width="match_parent"
+        android:layout_height="83dp"
+        android:layout_marginTop="10sp"
+        app:cardBackgroundColor="#A6108CDF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,42 +18,62 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0sp"
+            android:layout_marginBottom="0sp"
+            android:orientation="horizontal">
 
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="1dp">
+            <ImageView
+                android:id="@+id/imagenZonaBackground"
+                android:layout_width="89dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/logoandroid" />
 
-            <TextView
-                android:id="@+id/nombreActividad"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="bold">
+                android:layout_height="match_parent"
 
-            </TextView>
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="1dp">
 
-            <TextView
-                android:id="@+id/descripcion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="bold">
+                <TextView
+                    android:id="@+id/nombreActividad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:text="Nombre">
 
-            </TextView>
+                </TextView>
 
-            <TextView
-                android:id="@+id/zonaEntreno"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="bold">
+                <TextView
+                    android:id="@+id/zonaEntreno"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:text="Zona Entreno">
 
-            </TextView>
+                </TextView>
 
+                <TextView
+                    android:id="@+id/tiempo_repeticion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:text="tiempo o repeticion">
+
+                </TextView>
+
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
