--- a/Sportivity/app/src/main/res/menu/menu_main.xml
+++ b/Sportivity/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="antonio.david.sportivity.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/Reset_Activities"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Resetear mis actividades"
         app:showAsAction="never" />
 </menu>
