--- a/Sportivity/app/src/main/res/layout/activity_detail.xml
+++ b/Sportivity/app/src/main/res/layout/activity_detail.xml
@@ -6,9 +6,19 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="916dp"
+        android:layout_height="1497dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondolayout" />
+
+    <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="245dp"
-        android:layout_height="150dp"
+        android:layout_width="223dp"
+        android:layout_height="67dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,13 +31,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="20dp"
         android:text="00:00"
         android:textColor="@android:color/black"
         android:textSize="60sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/button_start_pause"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -36,12 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_timer"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp"
-        android:text="start"
+        android:layout_marginBottom="88dp"
+        android:text="@string/start"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -51,13 +62,14 @@
         android:layout_below="@+id/text_view_timer"
         android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/button_start_pause"
-        android:text="reset"
+        android:text="@string/reset"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_start_pause"
+        app:layout_constraintVertical_bias="0.04"
         tools:visibility="invisible" />
 
     <TextView
@@ -66,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="18dp"
-        android:text="Zona que estás entrenando:"
+        android:text="@string/zona_que_est_s_entrenando"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NombreInDetail" />
@@ -87,7 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
-        android:text="Actividad: "
+        android:text="@string/actividad"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -98,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="25dp"
-        android:text="Ejercitalo en: "
+        android:text="@string/ejercitalo_en"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ZonaInDetail" />
@@ -109,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="4dp"
-        android:text="min_rep"
+        android:text="@string/min_rep"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tiempo_repeticion_a_ejercitar"
         app:layout_constraintTop_toBottomOf="@+id/imageViewDetail" />
@@ -119,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:text="edit"
+        android:text="@string/edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -129,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="edit"
+        android:text="@string/edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ZonaInDetail" />
