--- a/Sportivity/app/src/main/res/layout-sw600dp/activity_list_not_pre.xml
+++ b/Sportivity/app/src/main/res/layout-sw600dp/activity_list_not_pre.xml
@@ -8,6 +8,7 @@
 
 
 
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
@@ -19,17 +20,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fondolayout" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reciclerViewNotPre"
-        android:layout_width="393dp"
-        android:layout_height="720dp"
+        android:layout_width="953dp"
+        android:layout_height="769dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/activity_pre_cardview" />
+        tools:listitem="@layout/activity_pre_cardview" >
+    </androidx.recyclerview.widget.RecyclerView>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewDetail_Activity"
+        android:name="antonio.david.sportivity.Activity_DetailFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
+        <include
+            layout="@layout/activity_detail"
+            android:layout_width="match_parent"
+            android:layout_height="820dp"
+            android:layout_marginTop="96dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reciclerViewNotPre" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
