--- a/Sportivity/app/src/main/res/layout/activity_lisit_actividades.xml
+++ b/Sportivity/app/src/main/res/layout/activity_lisit_actividades.xml
@@ -19,11 +19,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reciclerViewPre"
-        android:layout_width="364dp"
-        android:layout_height="476dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="347dp"
+        android:layout_height="559dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/activity_pre_cardview" />
@@ -33,8 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:onClick="addActividad"
-        android:text="Añadir Activdad personalizada"
+        android:text="@string/anadir_activdad_personalizada"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
