--- a/Sportivity/app/src/main/res/layout/add_activity.xml
+++ b/Sportivity/app/src/main/res/layout/add_activity.xml
@@ -7,12 +7,14 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="374dp"
-        android:layout_height="647dp"
+        android:layout_width="731dp"
+        android:layout_height="1108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.404"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.326"
         app:srcCompat="@drawable/fondolayout" />
 
     <EditText
@@ -21,7 +23,8 @@
         android:layout_height="48dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textColor="#F8F8F8"
+        android:text="@string/rep_min"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/spinnerRep_Tiempo"
         app:layout_constraintHorizontal_bias="0.623"
@@ -33,14 +36,15 @@
         android:id="@+id/editTextTextNombre"
         android:layout_width="197dp"
         android:layout_height="48dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FDFDFD"
+        android:text="@string/actividad"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintHorizontal_bias="0.828"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:layout_marginEnd="20dp"
-        android:text="Nombre: "
+        android:text="@string/nombre"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -63,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        android:text="Zona entreno: "
+        android:text="@string/zona_entreno"
         android:textColor="#070101"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -87,7 +91,7 @@
         android:id="@+id/imageView5"
         android:layout_width="88dp"
         android:layout_height="86dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textZona"
@@ -109,7 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
-        android:text="AÑADIR"
+        android:text="@string/a_adir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
